Prevent overflow from container

--- a/@kth/style/scss/components/Dropdown.scss
+++ b/@kth/style/scss/components/Dropdown.scss
@@ -2,8 +2,9 @@
 @use "./Button.scss";
 
 .#{g.$prefix}-dropdown {
-  max-width: 100vw;
-  max-height: 100vh;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: auto;
 
   .container {
     background: #fff;
